# TotalSMS

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  index.data  index.html  index.js  index.wasm  vcpkg.json
.github/workflows/: build-n64.yml  codeql-analysis.yml  deploy_web.yml
cmake/toolchain/: dreamcast.cmake  n64.cmake  ps2.cmake
examples/: CMakeLists.txt  example_emscripten.c  example_emscripten.html  example_sdl.c
src/: CMakeLists.txt  SN76489.c  bus.c  cpu.c  internal.h  joypad.c  main.c  single.c  sms.c  sms.h  types.h  vdp.c
src/core/: CMakeLists.txt  bus.c  internal.h  joypad.c  psg.c  rom_database.c  rom_database.h  single.c  sms.c  sms.h  sms_bus.c  sms_internal.h  sms_joypad.c  sms_psg.c  sms_rom_database.c  sms_single.c  sms_types.h  sms_vdp.c  sms_z80.c  types.h  vdp.c  z80.c
src/mgb/: CMakeLists.txt  compressors.c  compressors.h  directory.c  directory.h  filedialog.c  filedialog.h  mgb.c  mgb.h  rewind.c  rewind.h  romloader.c  romloader.h  util.c  util.h
src/mgb/cheats/: CMakeLists.txt  README.md
src/mgb/cheats/codebreaker/: CMakeLists.txt  codebreaker.c  codebreaker.h
src/mgb/cheats/gamegenie/: CMakeLists.txt  gamegenie.c  gamegenie.h
src/mgb/cheats/gameshark/: CMakeLists.txt  gameshark.c  gameshark.h
src/mgb/ifile/: ifile.c  ifile.h
src/mgb/ifile/cfile/: cfile.c  cfile.h
src/mgb/ifile/gzip/: gzip.c  gzip.h
src/mgb/ifile/mem/: mem.c  mem.h
src/mgb/ifile/zip/: zip.c  zip.h
src/mgb/patch/: CMakeLists.txt
src/mgb/patch/ips/: CMakeLists.txt  ips.c  ips.h
src/mgb/patch/ups/: CMakeLists.txt  ups.c  ups.h
src/tests/: CMakeLists.txt  test_audio.c  test_gfx.c  test_perf.c  test_romrunner.c
tests/: CMakeLists.txt  test_audio.c  test_gfx.c  test_romrunner.c
